Change config for public cloud

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: mysql_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: my_database
-      MYSQL_USER: user
+      MYSQL_ROOT_PASSWORD: P@Typo//map
+      MYSQL_DATABASE: typomapdb
+      MYSQL_USER: typo
       MYSQL_PASSWORD: password
     volumes:
       - ./data:/var/lib/mysql
@@ -20,9 +20,9 @@ services:
     environment:
       PMA_HOST: mysql
       PMA_USER: root
-      PMA_PASSWORD: root
+      PMA_PASSWORD: P@Typo//map
     ports:
-      - "8080:80"
+      - "5480:80"
     networks:
       - my_network
 
@@ -33,7 +33,7 @@ services:
     container_name: apache_php
     restart: always
     ports:
-      - "80:80"
+      - "5480:80"
     depends_on:
       - mysql
     networks:
