--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       MYSQL_ROOT_PASSWORD: P@Typo//map
       MYSQL_DATABASE: typomapdb
       MYSQL_USER: typo
-      MYSQL_PASSWORD: password
+      MYSQL_PASSWORD: P@Typo//map
     volumes:
       - ./data:/var/lib/mysql
     networks:
