--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     container_name: mysql_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: P@Typo//map
+      MYSQL_ROOT_PASSWORD: P@TypoM@p
       MYSQL_DATABASE: typomapdb
       MYSQL_USER: typo
-      MYSQL_PASSWORD: P@Typo//map
+      MYSQL_PASSWORD: P@TypoM@p
     volumes:
       - ./data:/var/lib/mysql
     networks:
