--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     container_name: mysql_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: P@TypoM@p
+      MYSQL_ROOT_PASSWORD: Pass$$W0rd
       MYSQL_DATABASE: typomapdb
       MYSQL_USER: typo
-      MYSQL_PASSWORD: P@TypoM@p
+      MYSQL_PASSWORD: Pass--W0rd
     volumes:
       - ./data:/var/lib/mysql
     networks:
