--- a/backapp/Dockerfile
+++ b/backapp/Dockerfile
@@ -7,9 +7,19 @@ RUN docker-php-ext-install pdo pdo_mysql
 
 # Installer les dépendances nécessaires
 RUN apt-get update && apt-get install -y \
+    libpng-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
+    zip \
+    unzip \
     git \
     libssl-dev \
+    && docker-php-ext-configure gd \
+    && docker-php-ext-install gd pdo pdo_mysql \
     && rm -rf /var/lib/apt/lists/*
+
+# Installation de Composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Activer les modules Apache utiles
 RUN a2enmod rewrite
@@ -18,11 +28,16 @@ RUN a2enmod rewrite
 WORKDIR /var/www/html
 
 # Cloner les sources depuis GitHub
-RUN git clone https://github.com/ezyinfo/typomap.git .
-RUN mv backapp/api ./
+# RUN git clone https://github.com/ezyinfo/typomap.git .
+
+# Installation des dépendances Laravel
+# RUN composer install --no-dev --optimize-autoloader
+# RUN mv backapp/api ./
 
 # Donner les bons droits aux fichiers
 RUN chown -R www-data:www-data /var/www/html
 
 # Exposer le port 80
 EXPOSE 80
+
+CMD ["apache2-foreground"]
