--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,10 +4,10 @@ services:
     container_name: mysql_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: typomapdb
-      MYSQL_USER: ${MSQL_USER}
-      MYSQL_PASSWORD: ${MSQL_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - ./data:/var/lib/mysql
     networks:
@@ -33,6 +33,33 @@ services:
     env_file:
       - .env
 
+  back:
+    build:
+      context: backapp
+      dockerfile: Dockerfile
+    container_name: backapp
+    restart: always
+    ports:
+      - "5482:80"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    environment:
+      APP_ENV: local
+      APP_KEY: ${APP_KEY}
+      DB_CONNECTION: mysql
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE: typomapdb
+      DB_USERNAME: ${MYSQL_USER}
+      DB_PASSWORD: ${MYSQL_PASSWORD}
+    networks:
+      - my_network
+    volumes:
+      - ./backapp:/var/www/html
+    env_file:
+      - .env
+
   front:
     build:
       context: frontapp
@@ -43,19 +70,8 @@ services:
       - "5480:80"
     networks:
       - my_network
-
-  back:
-    build:
-      context: backapp
-      dockerfile: Dockerfile
-    container_name: backapp
-    restart: always
-    ports:
-      - "5482:80"
-    depends_on:
-      - mysql
-    networks:
-      - my_network
+    volumes:
+      - ./www:/var/www/html
 
 networks:
   my_network:
